--- a/newcoop_app/requirements.txt
+++ b/newcoop_app/requirements.txt
@@ -1,8 +1,28 @@
-selenium
-django-haystack
-django
-psycopg2
-django-allauth
-whoosh
-django-bootstrap4
-django_select2
+asgiref==3.2.3
+beautifulsoup4==4.8.2
+certifi==2019.11.28
+chardet==3.0.4
+construct==2.10.56
+defusedxml==0.6.0
+Django==3.0.3
+django-allauth==0.41.0
+django-appconf==1.0.3
+django-bootstrap4==1.1.1
+django-haystack==3.0b1
+django-select2==7.2.0
+future==0.18.2
+idna==2.9
+oauthlib==3.1.0
+pefile==2019.4.18
+psycopg2==2.8.4
+python-ptrace==0.9.4
+python3-openid==3.1.0
+pytz==2019.3
+requests==2.23.0
+requests-oauthlib==1.3.0
+selenium==3.141.0
+six==1.14.0
+soupsieve==1.9.5
+sqlparse==0.3.0
+urllib3==1.25.8
+Whoosh==2.7.4
